# frugalAI

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md
.github/workflows/: cicd.yaml
api/: Dockerfile  Makefile  pyproject.toml
api/app/: gcp.py  main.py  model.py  routes.py
front/: Dockerfile  pyproject.toml
front/app/: context.py  home.py
front/app/logic/: api_call.py
front/app/pages/: debunker.py  details.py
infra/: README.md  gcp_init.py  utils.py
mlflow-tracking/: Dockerfile  README.md  pyproject.toml
shared/: pyproject.toml
shared/shared/: config.py  gcp.py  mlflow_utils.py  pydantic_models.py  system_utils.py  utils.py
shared/shared/data/: data_processor.py
shared/shared/model/: model.py  prompt.py
shared/tests/: test_mlflow.py
training/: Makefile  pyproject.toml
training/mlpipeline/: gcp.py  main.py  workflow.py
training/mlpipeline/data/: data_processor.py
training/mlpipeline/model/: model.py
