[project]
name = "frugalai-api"
version = "0.1.0"
description = "API serving predict and feedback endpoints"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "packaging>=25.0",
    "requests>=2.32.3",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }
