[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "codecarbon>=3.0.2",
    "datasets>=3.6.0",
    "google-cloud-storage>=3.1.1",
    "google>=3.0.0",
    "google-cloud-bigquery>=3.34.0",
    "mlflow>=3.1.0",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.18.2",
]
